--- a/index.html
+++ b/index.html
@@ -35,6 +35,28 @@
 
           </div>
 
+          <div class="content-box">
+            <h2>Some yummy food</h2>
+            <div class="content-info">
+                <div>
+                    <img src="images/steak.jpg">
+                    <p>Best steaks</p>
+                </div>
+                <div>
+                    <img src="images/big-pizza.jpg">
+                    <p>Yummy pizza</p>
+                </div>
+                <div>
+                    <img src="images/milanesa-napolitana.jpg">
+                    <p>Napolitan Milanese with French fries</p>
+                </div>
+                <div>
+                    <img src="images/revuelto-gramajo.jpg">
+                    <p>Scrambled Gramajo</p>
+                </div>
+            </div>
+        </div>
+
 
         </div>
     </body>
