Quote, signup and copyright

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <div class="hero-text">
                 <h1>Welcome to the best food website!</h1>
-                <p>The best food website out there, just in your hands, we share our food with you from all around the world.</p>
+                <p>The best food website out there; just in your hands. We share our food with you from all around the world.</p>
                 <button type="button">Sign Up</button>
             </div>
 
@@ -55,6 +55,28 @@
                     <p>Scrambled Gramajo</p>
                 </div>
             </div>
+        </div>
+
+        <div class="quote-box">
+            <p>"Good food is very often, event most often, simple food"
+            </p>
+            <b>
+                -- Anthony Bourdain
+            </b>
+        </div>
+
+        <div class="sign-up-box">
+            <div class="sign-item signs-text">
+                <h3>Keep it updated with Food News!</h3>
+                <p>Sign up for the latest information right now!</p>
+            </div>
+            <div class="sign-item signs-button">
+                <button type="button">Sign Up</button>
+            </div>
+        </div>
+
+        <div class="box-footer">
+            <p>Copyright © The Odin Project 2023</p>
         </div>
 
 
